--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/variables.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/variables.less
@@ -108,8 +108,8 @@
 @notificationColorHover: #c4510b;
 @color-beige: #f76446;
 
-@heightOfHeader: 70px;
-@bodyGapFromTop: @heightOfHeader + 5px;
+@heightOfHeader: 65px;
+@bodyGapFromTop: @heightOfHeader;
 @heightOfstaticPageHeader: 60px;
 //dashboard
 @dashboardCubeHeight: 179px;
