--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.css
@@ -333,6 +333,25 @@
     margin-right: -95px;
   }
 }
+.class-choose .status-strip {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  background: #FF9900;
+  color: #ffffff;
+}
+.class-choose .status-strip h2,
+.class-choose .status-strip ng-pluralize {
+  font-size: 20px;
+  margin: 0;
+}
+.class-choose .status-strip a {
+  color: #ffffff;
+  text-decoration: underline;
+}
 .class-choose .animate-repeat.ng-enter,
 .class-choose .animate-repeat.ng-leave {
   -webkit-transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
@@ -483,6 +502,27 @@
   column-count: 4;
   column-gap: 0px;
   width: 100%;
+}
+.class-choose .results .closed-department .box-style {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  flex-direction: column;
+  padding: 10px 15px;
+  text-align: center;
+}
+.class-choose .results .closed-department .box-style h5 {
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  margin: 0;
+}
+.class-choose .results .closed-department .box-style .subtitle {
+  font-size: 16px;
 }
 .class-choose .results > li {
   display: inline-block;
