Implementing d-color with scope

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
@@ -57,7 +57,7 @@
 
 
 
-    .title h2 {
+    .title {
         text-align: center;
         margin: 0 auto;
         width: 100%;
@@ -677,6 +677,7 @@
         color: @textColorWhite;
         font-size: 28px;
         flex-shrink: 0;
+        text-transform: capitalize;
     }
 
     .data {
