--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -21,7 +21,7 @@
         <h2 ng-switch-when="7">@UniversityResources.OnboardingHeaderStep7</h2>
         <h2 ng-switch-when="8">@UniversityResources.OnboardingHeaderStep8</h2>*@
 </div>
-<div class="search-container" ng-if="!cc.showCreateClass">
+<div class="search-container" ng-if="!cc.showCreateClass" flex-gt-md="85">
     <div class="top">
         <form class="search-form" name="classChooseFrom" novalidate ng-submit="cc.classSearch()" layout="row" layout-wrap>
             <input spellcheck="false" autofocus type="search" placeholder="@UniversityResources.OnboardingSearchContainer"
@@ -57,7 +57,7 @@
 
     <div class="grid-container">
         <ol class="results list-unstyled" @*vs-repeat vs-scroll-parent="window" vs-size="department.boxes.length * 72"*@>
-            <li class="angular-animate animate-repeat" ng-repeat="department in cc.data track by department.id">
+            <li class="" ng-repeat="department in cc.data track by department.id">
                 <div class="closed-department" ng-if="department.type === 'closed'" ng-include="'close-department.html'">
                 </div>
                 <div ng-if="department.type !== 'closed'" ng-include="'open-department.html'">
@@ -134,7 +134,7 @@
         <div class="department-name ellipsis" ng-bind="::department.name" d-color="{{::department.name}}" title="{{::department.name}}"></div>
     </div>
     <ol class="department-courses list-unstyled">
-        <li class="angular-animate animate-repeat" ng-repeat="e in department.boxes track by e.id" ng-if="!e.selected" ng-include="'slim-box-template.html'">
+        <li class="" ng-repeat="e in department.boxes track by e.id" ng-if="!e.selected" ng-include="'slim-box-template.html'">
         </li>
     </ol>
 </script>
@@ -175,12 +175,24 @@
     <button class="box-template box-style slim" ga-track-event="['course-choose', 'box']" ng-click="cc.choose(e,department)">
         <div class="icon background" d-color="{{::department.name}}" ng-bind="::e.name.substr(0,2) | lowercase"></div>
         <div class="data">
-            <h5 class="name ellipsis" d-color="{{::department.name}}" ng-bind="::e.name" title="{{::e.name}}"></h5>
-            <div class="metadata">
-                <div class="code ellipsis" ng-bind="::e.courseId"></div>
-                <div class="professor ellipsis" ng-bind="::e.professor"></div>
+            <div class="details">
+                <h5 class="name ellipsis" d-color="{{::department.name}}" ng-bind="::e.name" title="{{::e.name}}"></h5>
+                <div class="metadata">
+                    <div class="code ellipsis" ng-bind="::e.courseId"></div>
+                    <div class="professor ellipsis" ng-bind="::e.professor"></div>
+                </div>
             </div>
-        </div>
+            <div class="stats">
+                <div class="users stat">
+                    <md-icon md-svg-icon="t:user"></md-icon>
+                    <div class="num">900</div>
+                </div>
+                <div class="docs stat">
+                    <md-icon md-svg-icon="t:docs"></md-icon>
+                    <div class="num">100</div>
+                </div>
+            </div>
+            </div>
     </button>
 </script>
 
