--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/inline-material.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/inline-material.css
@@ -5200,7 +5200,40 @@ md-input-container.md-default-theme.md-input-invalid.md-input-focused label, md-
 md-input-container.md-default-theme.md-input-invalid ng-message, md-input-container.md-input-invalid ng-message, md-input-container.md-default-theme.md-input-invalid data-ng-message, md-input-container.md-input-invalid data-ng-message, md-input-container.md-default-theme.md-input-invalid x-ng-message, md-input-container.md-input-invalid x-ng-message, md-input-container.md-default-theme.md-input-invalid [ng-message], md-input-container.md-input-invalid [ng-message], md-input-container.md-default-theme.md-input-invalid [data-ng-message], md-input-container.md-input-invalid [data-ng-message], md-input-container.md-default-theme.md-input-invalid [x-ng-message], md-input-container.md-input-invalid [x-ng-message], md-input-container.md-default-theme.md-input-invalid [ng-message-exp], md-input-container.md-input-invalid [ng-message-exp], md-input-container.md-default-theme.md-input-invalid [data-ng-message-exp], md-input-container.md-input-invalid [data-ng-message-exp], md-input-container.md-default-theme.md-input-invalid [x-ng-message-exp], md-input-container.md-input-invalid [x-ng-message-exp], md-input-container.md-default-theme.md-input-invalid .md-char-counter, md-input-container.md-input-invalid .md-char-counter {
     color: rgb(221,44,0);
 }
+
 md-select.md-default-theme.ng-invalid.ng-dirty .md-select-value, md-select.ng-invalid.ng-dirty .md-select-value {
     color: rgb(221,44,0) !important;
     border-bottom-color: rgb(221,44,0) !important;
 }
+
+md-autocomplete.md-default-theme, md-autocomplete {
+    background: rgb(250,250,250);
+}
+
+    md-autocomplete.md-default-theme[disabled], md-autocomplete[disabled] {
+        background: rgb(245,245,245);
+    }
+
+    md-autocomplete.md-default-theme button md-icon path, md-autocomplete button md-icon path {
+        fill: rgb(117,117,117);
+    }
+
+    md-autocomplete.md-default-theme button:after, md-autocomplete button:after {
+        background: rgba(117,117,117,0.3);
+    }
+
+.md-autocomplete-suggestions-container.md-default-theme, .md-autocomplete-suggestions-container {
+    background: rgb(250,250,250);
+}
+
+    .md-autocomplete-suggestions-container.md-default-theme li, .md-autocomplete-suggestions-container li {
+        color: rgb(33,33,33);
+    }
+
+        .md-autocomplete-suggestions-container.md-default-theme li .highlight, .md-autocomplete-suggestions-container li .highlight {
+            color: rgb(117,117,117);
+        }
+
+        .md-autocomplete-suggestions-container.md-default-theme li:hover, .md-autocomplete-suggestions-container li:hover, .md-autocomplete-suggestions-container.md-default-theme li.selected, .md-autocomplete-suggestions-container li.selected {
+            background: rgb(238,238,238);
+        }
