--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
@@ -515,8 +515,12 @@
         text-align: center;
     }
 
-    .create-box form {
-        margin: 0 auto;
+    .create-class {
+        margin: 30px auto 0 auto;
+
+        .buttons {
+            text-align: right;
+        }
     }
     /*#region new boxes styling*/
     /*#endregion*/
@@ -578,6 +582,7 @@
     .department-name {
         font-size: 22px;
         font-weight: bold;
+        text-transform: capitalize;
     }
 
     md-toolbar {
