--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
@@ -16,7 +16,7 @@
         color: @textColorWhite;
 
         h2, ng-pluralize {
-            font-size: 20px;
+            font-size: 16px;
             margin: 0;
         }
 
@@ -63,7 +63,7 @@
         width: 100%;
         display: block;
         font-size: 30px;
-        padding-top: 47px;
+        padding-top: 20px;
         //padding: 50px 0;
         font-weight: bold;
         color: @textColorPurple;
@@ -476,10 +476,10 @@
             }
         }
 
-        > li {
+        > li > div {
             display: inline-block;
-            margin-bottom: 0px;
             width: 100%;
+            padding: 10px 15px;
         }
 
         .title {
@@ -490,7 +490,7 @@
 
             .department-name {
                 font-weight: bold;
-                font-size: 24px;
+                font-size: 20px;
             }
 
             .lock md-icon {
@@ -502,17 +502,35 @@
         .department-courses {
             width: 100%;
         }
-
-        > li {
-            padding: 10px 15px;
-        }
     }
 
     .empty-state {
         width: 100%;
         max-width: 600px;
-        margin: 0 auto;
+        margin: 40px auto 0 auto;
         text-align: center;
+        background-image: url(../../Images/Site/no_search_results.png);
+        background-repeat: no-repeat;
+        background-size: 150px;
+        background-position: 100% 50%;
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-right: 140px;
+        padding-bottom: 100px;
+
+        h2 {
+            color: @color-beige;
+            font-weight: bold;
+        }
+
+        .text {
+            font-size: 18px;
+            white-space: pre-wrap;
+            margin-top: 20px;
+        }
     }
 
     .create-class {
@@ -618,6 +636,11 @@
         margin: 18px auto;
         padding: 10px;
 
+        .department-name {
+            margin: 0 auto;
+            max-width: 300px;
+        }
+
         .center {
             .displayFlex;
             .align-items(center);
@@ -703,7 +726,8 @@
 
         .name {
             margin: 0;
-            font-size: 18px;
+            font-size: 14px;
+            font-weight: bold;
             width: 100%;
             margin-bottom: 2px;
         }
