--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.css
@@ -346,6 +346,7 @@
 .class-choose .status-strip h2,
 .class-choose .status-strip ng-pluralize {
   font-size: 16px;
+  line-height: normal;
   margin: 0;
 }
 .class-choose .status-strip a {
@@ -496,16 +497,28 @@
   margin: 0 auto;
 }
 .class-choose .results {
-  -moz-column-count: 4;
-  -moz-column-gap: 0px;
-  -webkit-column-count: 4;
-  -webkit-column-gap: 0px;
-  column-count: 4;
-  column-gap: 0px;
-  -webkit-column-fill: balance;
-  -moz-column-fill: balance;
-  column-fill: balance;
   width: 100%;
+}
+@media (min-width: 600px) {
+  .class-choose .results {
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2;
+  }
+}
+@media (min-width: 960px) {
+  .class-choose .results {
+    -moz-column-count: 3;
+    -webkit-column-count: 3;
+    column-count: 3;
+  }
+}
+@media (min-width: 1280px) {
+  .class-choose .results {
+    -moz-column-count: 4;
+    -webkit-column-count: 4;
+    column-count: 4;
+  }
 }
 .class-choose .results .closed-department .box-style {
   display: -webkit-flex;
