--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/selectClass.less
@@ -17,6 +17,7 @@
 
         h2, ng-pluralize {
             font-size: 16px;
+            line-height: normal;
             margin: 0;
         }
 
@@ -445,15 +446,24 @@
     }
 
     .results {
-        -moz-column-count: 4;
-        -moz-column-gap: 0px;
-        -webkit-column-count: 4;
-        -webkit-column-gap: 0px;
-        column-count: 4;
-        column-gap: 0px;
-        -webkit-column-fill: balance;
-        -moz-column-fill: balance;
-        column-fill: balance;
+        @media(min-width: 600px) {
+            -moz-column-count: 2;
+            -webkit-column-count: 2;
+            column-count: 2;
+        }
+
+        @media(min-width: 960px) {
+            -moz-column-count: 3;
+            -webkit-column-count: 3;
+            column-count: 3;
+        }
+
+        @media(min-width: 1280px) {
+            -moz-column-count: 4;
+            -webkit-column-count: 4;
+            column-count: 4;
+        }
+
         width: 100%;
 
         .closed-department .box-style {
