--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -53,7 +53,7 @@
                          md-search-text="cc.departmentName"
                          md-items="item in cc.queryDepartments(cc.departmentName)"
                          md-item-text="item.name"
-                         md-floating-label="@UniversityResources.SchoolName">
+                         md-floating-label="@UniversityResources.EnterDepName">
             <md-item-template>
                 <span md-highlight-text="cc.departmentName" md-highlight-flags="^i">{{item.name}}</span>
             </md-item-template>
