--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -21,7 +21,7 @@
                 <md-icon md-svg-icon="lc:filter"></md-icon>
             </button>
         </form>
-        <div class="selected-classes">
+        <div id="selected-classes">
             <button type="button" class="icon background" d-color="{{::sc.department.length}}" ng-click="cc.status($event, sc)" ng-repeat="sc in cc.selectedCourses | limitTo:6 track by sc.id " ng-bind="::sc.name.substr(0,2)"></button>
             <div class="empty" ng-if="cc.selectedCourses.length<6" ng-repeat="i in [1,2,3,4,5,6] | limitTo: (cc.selectedCourses.length - 6)" ng-bind="::i"></div>
         </div>
@@ -126,7 +126,7 @@
     </div>
     <ol class="department-courses list-unstyled">
         <li class="angular-animate animate-repeat" ng-repeat="e in department.boxes track by e.id" ng-if="!e.selected">
-            <button class="box-template box-style slim" ga-track-event="['course-choose', 'box']" ng-include="'slim-box-template.html'" ng-click="cc.choose(e,department)"></button>
+            <button class="box-template box-style slim" cart-animation-to="selected-classes" cart-animation="icon" ga-track-event="['course-choose', 'box']" ng-include="'slim-box-template.html'" ng-click="cc.choose(e,department)"></button>
         </li>
     </ol>
 </script>
@@ -178,7 +178,7 @@
 </script>
 
 <script defer type="text/ng-template" id="slim-box-template.html">
-    <div class="icon background" d-color="{{::department.name}}" ng-bind="::e.name.substr(0,2) | lowercase"></div>
+    <div class="icon background" d-color="{{::department.name}}">{{::e.name.substr(0,2) | lowercase}}</div>
     <div class="data">
         <div class="details">
             <h5 class="name ellipsis" dir="auto" d-color="{{::department.name}}" ng-bind="::e.name" title="{{::e.name}}"></h5>
