Reverted changes in library

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
@@ -23,6 +23,9 @@
         .define(@index);
         color: @@colorSet;
 
+        &.border {
+            border-color: @@colorSet;
+        }
         &.background {
             background: @@colorSet;
         }
