--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
@@ -42,6 +42,9 @@
             margin: 0;
             text-transform: capitalize;
             width: 100%;
+            flex-grow: 1;
+            border-bottom: 1px solid;
+            margin-bottom: 15px;
         }
 
         .box-style {
@@ -49,8 +52,7 @@
             flex-direction: column;
             .align-items(flex-start);
             .justifyContet(space-between);
-            padding: 10px;
-            height: 80px;
+            padding: 15px;
             position: relative;
 
             &:hover .status .lock {
